-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.11
-
None
-
-
e8c52d0e8ce617c49bcd76ca542eaa024d2f1d08 (qt/qtbase/dev)
There's multiple failing cases, log is attached which is "missing 2 failures"... 2 cases had to be skipped since they're failing (QTBUG-69132).
- relates to
-
QTBUG-69129 Android: QTimeZone::specificTransition fails
-
- Closed
-
-
QTBUG-98120 Fix failing qtbase CI tests for Android
-
- In Progress
-
-
QTBUG-87025 Report Android failing tests in CI
-
- Closed
-
For Gerrit Dashboard: QTBUG-69131 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
233346,4 | Android: tst_qtimezone: Blacklist a bunch | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |
329398,3 | WIP: I suspect several more bugs are fixed by the parent | dev | qt/qtbase | Status: ABANDONED | -2 | 0 |
332176,3 | Purge various BLACKLIST entries that are now fixed | dev | qt/qtbase | Status: MERGED | +2 | 0 |
334017,7 | Fix transitionEachZone() failures on Android | dev | qt/qtbase | Status: MERGED | +2 | 0 |